<resources>
    <string name="app_name">EX\'ACT</string>
    <string name="splash_screen">EX\'ACT</string>
    <string name="splash_screen_subtitle">EXO Fact and Information</string>
    <string name="exo_name">EXO</string>
    <string name="desc">Description</string>
    <string name="about">About Me</string>
    <string name="about_me_name">Rabiatul Fitra Aulia</string>
    <string name="about_me_email">aulifitra2002@gmail.com</string>
    <string name="share">Share</string>
    <string name="biodata">Biodata</string>
    <string name="stage_name">Stage Name</string>
    <string name="birth_name">Birth Name</string>
    <string name="position">Position</string>
    <string name="birthday">Birthday</string>
    <string name="nationality">Nationality</string>
    <string name="blood_type">Blood Type</string>
    <string name="mbti">MBTI</string>
    <string name="ig">Instagram</string>
    <string name="weibo">Weibo</string>
    <string name="facts">Facts</string>
    <string name="source">Source : https://kprofiles.com/exo-profile-facts/</string>
    <string-array name="data_name">
        <item>Suho</item>
        <item>Xiumin</item>
        <item>Lay</item>
        <item>Baekhyun</item>
        <item>Chen</item>
        <item>Chanyeol</item>
        <item>D.O</item>
        <item>Kai</item>
        <item>Sehun</item>
        <item>Kris (Former Member)</item>
        <item>Luhan (Former Member)</item>
        <item>Tao (Former Member)</item>
    </string-array>
    <string-array name="data_desc">
        <item>Kim Jun-myeon, better known by his stage name Suho is a South Korean singer, songwriter and actor. He is currently the leader and main vocalist of the South Korean-Chinese boy group EXO and its subunit EXO-K.</item>
        <item>Kim Min-seok, or better known by his stage name Xiumin, is a South Korean singer and actor. He is known as a member of the South Korean-Chinese music group EXO, along with its subunits EXO-M and EXO-CBX. He debuted as a soloist on September 26, 2022 with the release of his EP, Brand New.</item>
        <item>Zhang Yixing, better known by his stage name Lay Zhang or simply Lay, is a Chinese singer, rapper, songwriter, dancer and actor. He debuted in 2012 as a member of the South Korean-Chinese boy group EXO and its subunit EXO-M under SM Entertainment.</item>
        <item>Byun Baek-hyun, or better known by the mononym Baekhyun is a South Korean singer, songwriter and actor. In 2012, Baekhyun debuted as a member of the South Korean-Chinese group EXO. He is also a member of two EXO subunits, namely EXO-K and EXO-CBX. He is also the leader of the SuperM group.</item>
        <item>Kim Jong-dae, or better known by his stage name, Chen, is a South Korean singer and songwriter. He debuted in 2012 as a member and main vocalist of the South Korean-Chinese boy group EXO, and its subunit EXO-M.</item>
        <item>Park Chan-yeol, better known by the mononym Chanyeol is a South Korean rapper, singer, songwriter and actor. He is a member of the Chinese-South Korean boy group EXO and its sub-group EXO-K.</item>
        <item>Doh Kyung-soo, also professionally known as D.O., is a South Korean singer and actor, best known as a member of the South Korean-Chinese boy group Exo</item>
        <item>Kim Jong-in, or better known as Kai, is a South Korean singer, actor and dancer. He is a member of the South Korean-Chinese singing group EXO and its subgroup EXO-K.</item>
        <item>Oh Se-hun, better known by his mononym Sehun, is a South Korean singer, rapper, model and actor. He is best known as a member of the South Korean-Chinese boy band EXO and its sub-group EXO-K.</item>
        <item>Wu Yi Fan, known as Kris Wu, is a Chinese Canadian actor, singer, record producer, and model. He was a former member of the South Korean-Chinese boy band EXO and its subgroup EXO-M under SM Entertainment, before leaving the group in 2014.</item>
        <item>Lu Han is a singer from China. He is a former member of EXO-M, a subgroup of the Chinese-South Korean boy band EXO. He is the main singer and dancer of the group.</item>
        <item>Huang Zitao, better known by his nickname TAO, is a Chinese singer, rapper, songwriter, actor and martial artist. He has been practicing Wushu since he was 5 years old. He is a former member of the K-pop boy band EXO, sub-unit EXO-M with the position of Lead Rapper and the image "Fighter".</item>
    </string-array>
    <string-array name="data_stage_name">
        <item>Suho</item>
        <item>Xiumin</item>
        <item>Lay</item>
        <item>Baekhyun</item>
        <item>Chen</item>
        <item>Chanyeol</item>
        <item>D.O</item>
        <item>Kai</item>
        <item>Sehun</item>
        <item>Kris</item>
        <item>Luhan</item>
        <item>Tao</item>
    </string-array>
    <string-array name="data_birth_name">
        <item>Kim Jun Myeon</item>
        <item>Kim Min Seok</item>
        <item>Zhang Yixing</item>
        <item>Byun Baek Hyun</item>
        <item>Kim Jong Dae</item>
        <item>Park Chan Yeol</item>
        <item>Do Kyung Soo</item>
        <item>Kim Jong In</item>
        <item>Oh Se Hun</item>
        <item>Wu Yi Fan</item>
        <item>Lu Han</item>
        <item>Huang Zi Tao</item>
    </string-array>
    <string-array name="data_position">
        <item>Leader, Lead Vocalist, Visual</item>
        <item>Sub Vocalist, Sub Rapper</item>
        <item>Main Dancer, Sub Vocalist, Sub Rapper</item>
        <item>Main Vocalist</item>
        <item>Main Vocalist</item>
        <item>Main Rapper, Sub Vocalist, Visual</item>
        <item>Main Vocalist</item>
        <item>Main Dancer, Sub Rapper, Sub Vocalist, Center, Visual</item>
        <item>Lead Dancer, Lead Rapper, Visual, Maknae</item>
        <item>Main Rapper, Leader (EXO-M</item>
        <item>Lead Vocalist, Lead Dancer, Visual, Face of The Group</item>
        <item>Lead Rapper, Lead Dancer, Sub Vocalist</item>
    </string-array>
    <string-array name="data_birthday">
        <item>May 22, 1991</item>
        <item>March 26, 1990</item>
        <item>October 7, 1991</item>
        <item>May 6, 1992</item>
        <item>September 21, 1992</item>
        <item>November 27, 1992</item>
        <item>January 12, 1993</item>
        <item>January 14, 1994</item>
        <item>April 12, 1994</item>
        <item>November 6, 1990</item>
        <item>April 20, 1990</item>
        <item>May 2, 1993</item>
    </string-array>
    <string-array name="data_nationality">
        <item>8 Korean and 1 China</item>
        <item>Korean</item>
        <item>Korean</item>
        <item>China</item>
        <item>Korean</item>
        <item>Korean</item>
        <item>Korean</item>
        <item>Korean</item>
        <item>Korean</item>
        <item>Korean</item>
        <item>China</item>
        <item>China</item>
        <item>China</item>
    </string-array>
    <string-array name="data_blood_type">
        <item>AB</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
        <item>B</item>
        <item>A</item>
        <item>A</item>
        <item>A</item>
        <item>O</item>
        <item>O</item>
        <item>A</item>
        <item>AB</item>
    </string-array>
    <string-array name="data_mbti">
        <item>ENFJ</item>
        <item>ENFJ</item>
        <item>INFP</item>
        <item>ESTJ</item>
        <item>ISTJ</item>
        <item>ENFJ</item>
        <item>ENTJ</item>
        <item>INFJ</item>
        <item>INTP</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
    </string-array>
    <string-array name="data_insta">
        <item>"@kimjuncotton"</item>
        <item>"@e_xiu_o</item>
        <item>"@layzhang</item>
        <item>"@baekhyunee_exo"</item>
        <item>-</item>
        <item>"@real__pcy"</item>
        <item>-</item>
        <item>"@zkdlin</item>
        <item>"@oohsehun"</item>
        <item>"@kriswu"</item>
        <item>"@7_luhan_m"</item>
        <item>"@hztttao"</item>
    </string-array>
    <string-array name="data_weibo">
        <item>-</item>
        <item>-</item>
        <item>努力努力再努力x</item>
        <item>baekhyunee7</item>
        <item>-</item>
        <item>real__pcyyyyy</item>
        <item>-</item>
        <item>-</item>
        <item>wu世勋-EXO</item>
        <item>Mr_凡先生</item>
        <item>M鹿M</item>
        <item>CPOPKing-黄子韬</item>
    </string-array>
    <string-array name="data_facts">
        <item>– He lives in the Apujeong neighborhood of Seoul, South Korea.\n– He has an older brother, Kim Dongkyu (4 years older).\n– He became an SM trainee in 2006 when he was 16.\n– He says out of all of the EXO members, he’s the best at public speaking.\n– He is very polite and considerate.</item>
        <item>– Hometown: Guri, Gyeonggi province.\n– Xiumin has a little sister whose identity he worked very hard to keep a secret.\n– He became an SM trainee in 2008.\n– Specialty: taekwondo, fencing, kendo, and soccer.\n– Though his looks make him appear as the youngest member, he is actually the oldest.</item>
        <item>- Hometown: Changsha, Hunan, China. \n- He’s an only child\n- He used to be a local child star in China.\n- He became an SM trainee in 2008 when he was 16\n- Specialties: Guitar, dancing, piano.</item>
        <item>– Hometown: Bucheon, Gyeonggi Province, South Korea.\n– He has an older brother named Byun Baekbeom.– He officially joined SM in 2011.\n– His popular nickname is “Bacon”.\n– Personality: he is a bright, cheerful, childlike person.</item>
        <item>– Hometown: Siheung, Gyeonggi province.\n– He has an older brother.\n– He became an SM Entertainment trainee in 2011.\n– The thing he is best at is singing high-notes.\n– Has a humorous and very playful personality.</item>
        <item>– Hometown: Seoul, South Korea.\n– He has a sister, Park Yoo-ra, who used to be a news anchor (3 years older).\n– He became an SM Entertainment trainee in 2008.\n– Specialties: Playing musical instruments (guitar, drum, bass, djembe), rap, acting.\n– He is always cheerful and bright.</item>
        <item>- Hometown: Goyang, Gyeonggi Province, South Korea.\n– He has an older brother, Do Seungsoo.\n- He became a SM trainee in 2010.\n- Specialties: Singing, beat box, acting.\n- He has a habit of humming songs.</item>
        <item>- Hometown: Suncheon, South Jeolla Province/Jeollanam-do, S. Korea.\n- Has 2 older sisters (one 9 years older and another 5 years older).\n- He became a SM trainee in 2007, when he was 13.\n- Specialties: Dance (ballet, jazz, hip hop, popping, rocking).\n- He loves playing video games.</item>
        <item>- Hometown: Seoul, South Korea.\n- He has an older brother (3 years older).\n- He became a SM trainee in 2008, when he was 14.\n- Specialties: Dancing, acting\n- His favorite foods are meat and sushi</item>
        <item> He was born in Guangzhou, Guangdong province, China, but at age of 10 moved to Vancouver, Canada.\n– Kris’ birth name is Li Jiaheng and his name was changed to Wu Yifan for personal reasons.\n– He is fluent in 4 languages: English, Cantonese, Mandarin, and Korean.\n– Specialties: Languages and Basketball.\n– He’s very social and can talk to anyone.</item>
        <item>– He was born in Haidian District, Beijing, China.\n– He’s an only child.\n– Auditioned to be a trainee for JYP Entertainment but was not accepted.\n– He likes girls who are demure and quiet.\n– He likes simple clothes.</item>
        <item>– He was born in Qingdao, Shandong province, China.\n– He’s an only child.\n– Nickname: Peach, Kung Fu Panda.\n– He loves the color blue, Western food, basketball and black cat.\n– His favorite music genre is hip hop and RandB.</item>
    </string-array>
</resources>